raspberrypi/ros2_ws/log/build_2024-11-01_20-53-53/my_python_package/stderr.log
  File "/home/abendezu/Documents/Projects/Self-Driving-Car/raspberrypi/ros2_ws/install/my_python_package/lib/python3.8/site-packages/my_python_package/my_node.py", line 21
    def main(args==None):
                 ^
SyntaxError: invalid syntax

